--- a/public/index.html
+++ b/public/index.html
@@ -237,7 +237,6 @@
             <button class="btn-primary" onclick="loadMessages()">Refresh</button>
             <button class="btn-primary" onclick="toggleAutoRefresh()">Auto-refresh: <span id="autoRefreshStatus">OFF</span></button>
             <input type="text" class="filter-input" id="filterInput" placeholder="Filter messages...">
-            <button class="btn-danger" onclick="clearMessages()">Clear All</button>
         </div>
 
         <div class="messages-container">
@@ -344,26 +343,7 @@
             return div.innerHTML;
         }
 
-        async function clearMessages() {
-            if (!confirm('Are you sure you want to clear all messages?')) {
-                return;
-            }
-
-            try {
-                const response = await fetch(`${SERVER_URL}/workadventure/messages`, {
-                    method: 'DELETE'
-                });
-                if (response.ok) {
-                    allMessages = [];
-                    displayMessages(allMessages);
-                    updateStats();
-                    alert('Messages cleared successfully!');
-                }
-            } catch (error) {
-                console.error('Error clearing messages:', error);
-                alert('Error clearing messages: ' + error.message);
-            }
-        }
+        // Read-only app: no destructive actions
 
         function toggleAutoRefresh() {
             if (autoRefreshInterval) {
